--- a/package.json
+++ b/package.json
@@ -1,7 +1,19 @@
 {
   "name": "@kingteza/crud-component",
   "private": false,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "React CRUD component library with Ant Design",
+  "keywords": ["react", "crud", "antd", "typescript"],
+  "author": "Kingteza",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kingteza/crud-component"
+  },
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -11,19 +23,19 @@
   },
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
-      "require": "./dist/index.cjs",
-      "types": "./dist/index.d.ts"
+      "require": "./dist/index.cjs"
     },
     "./common": {
+      "types": "./dist/common/index.d.ts",
       "import": "./dist/common/index.js",
-      "require": "./dist/common/index.cjs",
-      "types": "./dist/common/index.d.ts"
+      "require": "./dist/common/index.cjs"
     },
     "./util": {
+      "types": "./dist/util/index.d.ts",
       "import": "./dist/util/index.js",
-      "require": "./dist/util/index.cjs",
-      "types": "./dist/util/index.d.ts"
+      "require": "./dist/util/index.cjs"
     }
   },
   "publishConfig": {
