--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@kingteza/crud-component",
   "private": false,
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "React CRUD component library with Ant Design",
   "keywords": [
     "react",
@@ -37,9 +37,9 @@
       "require": "./dist/index.cjs"
     },
     "./common": {
-      "types": "./dist/common/index.d.ts",
-      "import": "./dist/common/index.js",
-      "require": "./dist/common/index.cjs"
+      "types": "./dist/components/common/index.d.ts",
+      "import": "./dist/components/common/index.js",
+      "require": "./dist/components/common/index.cjs"
     },
     "./util": {
       "types": "./dist/util/index.d.ts",
@@ -87,6 +87,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-i18next": "^15.2.0",
+    "tsup": "^8.3.5",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.5",
