--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -9,18 +9,19 @@
     "baseUrl": "src",
     "esModuleInterop": false,
     "declaration": true,
+    "declarationDir": "./dist",
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "module": "ESNext",
-    "moduleResolution": "Node",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noImplicitAny": false,
-    "noEmit": true,
+    "emitDeclarationOnly": true,
     "allowImportingTsExtensions": true,
     "typeRoots": ["./build/index.ts"],
-    "jsx": "react",
+    "jsx": "react-jsx",
 
     "noUnusedLocals": true,
     "noUnusedParameters": true,
