--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@kingteza/crud-component",
   "private": false,
-  "version": "1.0.11",
+  "version": "1.0.12",
   "description": "React CRUD component library with Ant Design",
   "keywords": [
     "react",
@@ -19,14 +19,21 @@
     "url": "https://github.com/kingteza/crud-component"
   },
   "files": [
-    "dist",
+    "dist/*.js",
+    "dist/*.cjs",
+    "dist/*.d.ts",
+    "dist/components/",
+    "dist/util/",
+    "dist/locale/",
     "README.md"
   ],
   "type": "module",
   "sideEffects": false,
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "clean": "rm -rf dist",
+    "build": "npm run clean && tsc && vite build",
+    "prepublishOnly": "npm run clean && npm run build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
