--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@kingteza/crud-component",
   "private": false,
-  "version": "1.0.24",
+  "version": "1.0.28",
   "description": "React CRUD component library with Ant Design",
   "keywords": [
     "react",
@@ -23,17 +23,18 @@
     "/*.cjs",
     "/*.d.ts",
     "/components/",
+    "/common/",
     "/util/",
     "/locale/",
-    "../README.md"
+    "/README.md"
   ],
   "type": "module",
   "sideEffects": false,
   "scripts": {
     "dev": "vite",
     "clean": "rm -rf dist",
-    "build": "npm run clean && tsc && vite build && cp package.json dist/",
-    "prepublishOnly": "npm run clean && npm run build",
+    "build": "npm run clean && tsc && vite build && cp package.json README.md dist/",
+    "publish-npm": "yarn build && cd dist && npm whoami >/dev/null 2>&1 || npm login && npm publish",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -44,9 +45,9 @@
       "require": "./index.cjs"
     },
     "./common": {
-      "types": "./components/common/index.d.ts",
-      "import": "./components/common/index.js",
-      "require": "./components/common/index.cjs"
+      "types": "./common/index.d.ts",
+      "import": "./common/index.js",
+      "require": "./common/index.cjs"
     },
     "./util": {
       "types": "./util/index.d.ts",
@@ -67,9 +68,7 @@
     "mime": "^4.0.6",
     "papaparse": "^5.4.1",
     "path-browserify": "^1.0.1",
-    "react": "^18.3.1",
     "react-cropper": "^2.3.3",
-    "react-dom": "^18.3.1",
     "react-highlight-words": "^0.20.0",
     "react-i18next": "^15.2.0",
     "react-responsive": "^10.0.0",
@@ -91,8 +90,8 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
     "tsup": "^8.3.5",
     "typescript": "~5.6.2",
