--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@kingteza/crud-component",
   "private": false,
-  "version": "1.0.36",
+  "version": "1.0.37",
   "description": "React CRUD component library with Ant Design",
   "keywords": [
     "react",
@@ -48,7 +48,7 @@
     "./common": {
       "types": "./common/index.d.ts",
       "import": "./common/index.es.js",
-      "require": "./common/index.cjs"
+      "require": "./common/index.cjs.js"
     },
     "./util": {
       "types": "./util/index.d.ts",
