--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@kingteza/crud-component",
   "private": false,
-  "version": "1.0.50",
+  "version": "1.0.51",
   "description": "React CRUD component library with Ant Design",
   "keywords": [
     "react",
@@ -62,8 +62,13 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.2",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "bootstrap-css-only": "^4.4.1",
     "browser-image-compression": "^2.0.2",
+    "cropperjs": "^2.0.1",
     "dayjs": "^1.11.13",
     "file-saver": "^2.0.5",
     "i18next": "^24.2.0",
