Update dependencies in package.json for improved image cropping functionality, replace cropperjs with react-advanced-cropper, and introduce new file upload handling in App component. Add custom icons for flip actions and enhance CRUD components with draggable features and improved layout consistency.

--- a/package.json
+++ b/package.json
@@ -66,16 +66,16 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@iconify/react": "^6.0.1",
     "bootstrap-css-only": "^4.4.1",
     "browser-image-compression": "^2.0.2",
-    "cropperjs": "^2.0.1",
     "dayjs": "^1.11.13",
     "file-saver": "^2.0.5",
     "i18next": "^24.2.0",
     "mime": "^4.0.6",
     "papaparse": "^5.4.1",
     "path-browserify": "^1.0.1",
-    "react-cropper": "^2.3.3",
+    "react-advanced-cropper": "^0.20.1",
     "react-highlight-words": "^0.20.0",
     "react-i18next": "^15.2.0",
     "react-quill": "^2.0.0",
