--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/commit-analyzer": "^13.0.1",
     "@semantic-release/git": "^10.0.1",
+    "@semantic-release/npm": "^13.1.1",
     "@semantic-release/release-notes-generator": "^14.1.0",
     "@types/file-saver": "^2.0.7",
     "@types/papaparse": "^5.3.15",
