fix: update package.json files field to include dist folder
- Change files array to include dist/ folder with compiled source
- Remove individual source folders (crud/, common/, etc.)
- This ensures the compiled dist/ folder gets published to npm
- Fixes issue where source files weren't visible in published package

--- a/package.json
+++ b/package.json
@@ -19,17 +19,9 @@
     "url": "https://github.com/kingteza/crud-component"
   },
   "files": [
-    "/*.js",
-    "/*.cjs",
-    "/*.d.ts",
-    "/crud/",
-    "/common/",
-    "/types/",
-    "/icons/",
-    "/hooks/",
-    "/util/",
-    "/locale/",
-    "/README.md"
+    "dist/",
+    "README.md",
+    "package.json"
   ],
   "type": "module",
   "sideEffects": false,
