fix: update types path in package.json to point to dist directory
- Changed the "types" field in package.json to reference the compiled index.d.ts file in the dist/ directory for improved package structure.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "types",
     "typings"
   ],
-  "types": "./index.d.ts",
+  "types": "./dist/index.d.ts",
   "author": "Kingteza",
   "license": "MIT",
   "repository": {
