fix: add react-error-boundary for improved error handling
- Added `react-error-boundary` package to enhance error management in the application.
- Integrated `ErrorBoundaryComponent` in `CrudViewerUtil` to wrap various renderers, ensuring graceful error handling.
- Updated `App.tsx` to include a new `truncated` property for better text display management.

--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "papaparse": "^5.4.1",
     "path-browserify": "^1.0.1",
     "react-advanced-cropper": "^0.20.1",
+    "react-error-boundary": "^6.0.0",
     "react-highlight-words": "^0.20.0",
     "react-i18next": "^15.2.0",
     "react-quill": "^2.0.0",
