feat: enhance CSS handling and bundling
- Updated package.json to specify side effects for CSS files and added style entry points.
- Modified vite.config.ts to disable CSS code splitting and ensure all CSS is bundled into a single style.css file.
- Imported CSS in index.ts to ensure proper bundling.
- Created a new style.css file to re-export all CSS for the library.
- Removed unused CSS import from CrudComponentProvider.tsx.

--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "package.json"
   ],
   "type": "module",
-  "sideEffects": false,
+  "sideEffects": [
+    "**/*.css",
+    "**/*.scss"
+  ],
+  "style": "./dist/style.css",
   "scripts": {
     "dev": "vite",
     "clean": "rm -rf dist",
@@ -50,7 +54,9 @@
       "types": "./dist/util/index.d.ts",
       "import": "./dist/util/index.es.js",
       "require": "./dist/util/index.cjs.js"
-    }
+    },
+    "./style.css": "./dist/style.css",
+    "./styles": "./dist/style.css"
   },
   "publishConfig": {
     "access": "public"
