chore: update dependencies and clean up translation hooks
- Added i18next and react-i18next as dependencies with optional peer dependencies in package.json.
- Removed console logging for the i18n instance in useTranslationLib and useTranslationLibNoNS functions to streamline the code.

--- a/package.json
+++ b/package.json
@@ -122,6 +122,16 @@
     "antd": ">=5.22.6",
     "react": ">=18.3.1",
     "react-dom": ">=18.3.1",
-    "react-router-dom": ">=6.3.0"
+    "react-router-dom": ">=6.3.0",
+    "i18next": "^24.2.0",
+    "react-i18next": "^15.2.0"
+  },
+  "peerDependenciesMeta": {
+    "i18next": {
+      "optional": true
+    },
+    "react-i18next": {
+      "optional": true
+    }
   }
 }
