feat: add phone number input field and integrate react-phone-number-input
- Introduced a new phone number input field in the CRUD form.
- Added the `react-phone-number-input` package to handle phone number formatting and validation.
- Updated styles to accommodate the new input component.
- Enhanced the CRUD field mapping to support the new phone number field type.

--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "react-error-boundary": "^6.0.0",
     "react-highlight-words": "^0.20.0",
     "react-i18next": "^15.2.0",
+    "react-phone-number-input": "^3.4.14",
     "react-quill": "^2.0.0",
     "react-responsive": "^10.0.0",
     "uuid": "^11.0.3"
@@ -120,11 +121,11 @@
   },
   "peerDependencies": {
     "antd": ">=5.22.6",
+    "i18next": "^24.2.0",
     "react": ">=18.3.1",
     "react-dom": ">=18.3.1",
-    "react-router-dom": ">=6.3.0",
-    "i18next": "^24.2.0",
-    "react-i18next": "^15.2.0"
+    "react-i18next": "^15.2.0",
+    "react-router-dom": ">=6.3.0"
   },
   "peerDependenciesMeta": {
     "i18next": {
